# imx8mp_m7_i2c_usb_pd_stusb4500

./: .gitignore  FreeRTOSConfig.h  Readme.txt  common.c  common.h  i2c_task.c  i2c_task.h  i2c_usb_pd_stusb4500.c  i2c_usb_pd_stusb4500.h  i2c_usb_pd_stusb4500_print.c  i2c_usb_pd_stusb4500_print.h  main.c  main.h
armgcc/: CMakeLists.txt  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  config.cmake  flags.cmake
board_cfg/: board.c  board.h  clock_config.c  empty_rsc_table.c  fsl_iomuxc.h  pin_mux.c
rpmsg/: rsc_table.c  rsc_table.h
